feat(product): create product archive atomically
